# wagtail-cookieconsent

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
wagtailcookieconsent/: apps.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
wagtailcookieconsent/assets/scss/: cookieconsent.scss  wagtailcookieconsent.scss
wagtailcookieconsent/example/: base.html
wagtailcookieconsent/fixtures/: wagtailcookieconsent.json
wagtailcookieconsent/migrations/: 0001_initial.py  0002_wagtailcookieconsent_expiration.py
wagtailcookieconsent/static/: cookieconsent.min.css  cookieconsent.min.css.map  wagtailcookieconsent.css
wagtailcookieconsent/templates/wagtailcookieconsent/: consent_banner.html  info.html
wagtailcookieconsent/templates/wagtailcookieconsent/forms/: cookie_submit_forms.html
wagtailcookieconsent/templatetags/: cookie_consent_tags.py  wagtail_cookie_consent_tags.py
