[metadata]
name = wagtail-cookieconsent
version = 1.0.1
description = Cookie Consent made specifically to work with Wagtail 2.8+
url = https://github.com/suchermon/wagtail-cookieconsent
author = Mon Sucher
author_email = msucher@umn.edu
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6

[options]
zip_safe = False
include_package_data = True
packages = find:
[flake8]
exclude = .git,.ropeproject,.venv,venv
ignore = E501
