[metadata]
name = wagtail-cookieconsent
version = 1.1.8
description = A simple wagtail package to add a consent prompt for visitors. The cookie names can be defined in wagtail CMS and messages are customizeable as well.
long_description = file: README.md
url = https://github.com/suchermon/wagtail-cookieconsent.git
author = Mon Sucher
author_email = supawaza@gmail.com
license = MIT
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0.3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
[flake8]
exclude = .git,.ropeproject,.venv,venv
ignore = E501
